--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
+    "react-typed": "^2.0.12",
     "styled-components": "^6.1.8",
     "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4"
